--- a/css/style.css
+++ b/css/style.css
@@ -91,12 +91,15 @@ h5,
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
-  padding: 1rem;
+  padding: 0.5rem;
   border-radius: 1rem;
-  /* width: 100%; */
-  word-wrap: break-word;
-  overflow-wrap: break-word;
+  gap: 0.5rem;
+
+  & div {
+    text-align: center;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+  }
 }
 
 .materia:hover {
