--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
   --descanso: #c05476;
@@ -22,7 +22,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: "Permanent Marker", serif;
+  font-family: 'Permanent Marker', serif;
   font-weight: bolder;
 }
 
@@ -35,6 +35,7 @@ main {
   display: flex;
   justify-content: center;
   background-color: #3c3c3c;
+  min-height: 100vh;
 }
 
 section {
@@ -100,7 +101,9 @@ h5,
   border-radius: 1rem;
   gap: 0.5rem;
 
-  & div {
+  & div,
+  h5,
+  h4 {
     text-align: center;
     word-wrap: break-word;
     overflow-wrap: break-word;
