--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
 :root {
   --descanso: #c05476;
@@ -22,7 +22,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: 'Permanent Marker', serif;
+  font-family: "Permanent Marker", serif;
   font-weight: bolder;
 }
 
@@ -43,6 +43,11 @@ section {
   flex-direction: column;
   align-items: center;
   width: 20vw;
+}
+
+h4 {
+  color: white;
+  font-weight: bolder;
 }
 
 h5,
@@ -107,6 +112,10 @@ h5,
     text-align: center;
     word-wrap: break-word;
     overflow-wrap: break-word;
+  }
+
+  & h4 {
+    color: black;
   }
 }
 
