--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
   --descanso: #c05476;
@@ -26,7 +26,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: "Permanent Marker", serif;
+  font-family: 'Permanent Marker', serif;
   font-weight: bolder;
 }
 
@@ -107,7 +107,7 @@ h5,
 
 .background {
   position: absolute;
-  left: 0;
+  /* left: 0; */
   top: 0;
   width: 100%;
   height: 100%;
